--- a/package.json
+++ b/package.json
@@ -9,18 +9,19 @@
     "preview": "vite preview"
   },
   "devDependencies": {
-    "@tweakpane/core": "^2.0.4",
-    "@types/three": "^0.169.0",
-    "@zooizooi/eslint-config": "^1.1.0",
+    "@tweakpane/core": "^2.0.5",
+    "@types/three": "^0.170.0",
+    "@zooizooi/eslint-config": "^1.1.2",
     "typescript": "~5.6.3",
-    "vite": "^5.4.10",
+    "vite": "^5.4.11",
     "vite-plugin-glsl": "^1.3.0"
   },
   "dependencies": {
+    "@tweakpane/plugin-essentials": "^0.2.1",
     "@zooizooi/asset-loader": "^1.2.1",
-    "@zooizooi/utils": "^1.0.12",
+    "@zooizooi/utils": "^1.0.16",
     "gsap": "^3.12.5",
     "three": "^0.170.0",
-    "tweakpane": "^4.0.4"
+    "tweakpane": "^4.0.5"
   }
 }
