:wrench: Add types for vite-plugin-glsl in tsconfig.json

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -19,7 +19,10 @@
     "noUnusedParameters": true,
     "noFallthroughCasesInSwitch": true,
     "noUncheckedSideEffectImports": true,
-    
+
+    "types": [
+        "vite-plugin-glsl/ext"
+    ],
     "baseUrl": ".",
     "paths": {
         "@/*": ["src/*"]
