--- a/package.json
+++ b/package.json
@@ -4,14 +4,18 @@
   "version": "0.0.0",
   "type": "module",
   "scripts": {
-    "dev": "vite",
+    "dev": "concurrently \"vite\" \"node debuggerBackend.js\"",
     "build": "tsc && vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "backend": "node debuggerBackend.js"
   },
   "devDependencies": {
     "@tweakpane/core": "^2.0.5",
     "@types/three": "^0.170.0",
     "@zooizooi/eslint-config": "^1.1.2",
+    "concurrently": "^9.1.0",
+    "cors": "^2.8.5",
+    "express": "^4.21.1",
     "typescript": "~5.6.3",
     "vite": "^5.4.11",
     "vite-plugin-glsl": "^1.3.0"
