📦Add eslint dev dependency

--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@zooizooi/eslint-config": "^1.1.16",
     "concurrently": "^9.2.0",
     "cors": "^2.8.5",
+    "eslint": "^9.38.0",
     "express": "^5.1.0",
     "typescript": "~5.9.2",
     "vite": "^7.1.2",
