--- a/tsconfig.json
+++ b/tsconfig.json
@@ -21,6 +21,7 @@
         "noUnusedParameters": true,
         "noFallthroughCasesInSwitch": true,
         "noUncheckedSideEffectImports": true,
+        "verbatimModuleSyntax": true,
         "types": [
             "vite-plugin-glsl/ext"
         ],
